# parcal

./: .env.copy  .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
accounts/: admin.py  form.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
app/: context_processor.py  urls.py
app/forms/: order.py  store.py
app/migrations/: 0001_initial.py  0002_alter_store_address_alter_store_contact_person_and_more.py  0003_order_order_id.py  0004_order_item_description_order_special_instructions_and_more.py  0005_alter_order_consignment_id.py  0006_order_status.py
app/models/: __init__.py  order.py  store.py
app/serializers/: order.py
app/templates/app/: base.html  dashboard.html
app/templates/app/order/: form.html  order.html
app/templates/app/store/: form.html  list.html
app/utils/: helper.py  order.py
app/views/: dashboard.py  order.py  store.py
smartparsal/: asgi.py  settings.py  urls.py  wsgi.py
static/assets/css/: app.min.css  bootstrap.min.css  custom.min.css
static/assets/js/: app.js  location_picker.js
static/assets/js/pages/: apexcharts-area.init.js  apexcharts-bar.init.js  apexcharts-boxplot.init.js  apexcharts-bubble.init.js  apexcharts-candlestick.init.js  apexcharts-column.init.js  apexcharts-funnel.init.js  apexcharts-heatmap.init.js  apexcharts-line.init.js  apexcharts-mixed.init.js  apexcharts-pie.init.js  apexcharts-polararea.init.js  (+81 more)
templates/registration/: base.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
(+1 files in other folders)
